# OpenNT

./: CMakeLists.txt  LICENSE  README.md  main.cpp  praccy_waccy.sln  praccy_waccy.vcxproj  praccy_waccy.vcxproj.filters  window.cpp
gl/glad/src/: glad.c
include/: components.h  math_stuff.h  opennt.h  resource_manager.h  resources.h  system.h
include/components/: color_component.h  component_storage.h  i_component.h  i_component_storage.h  light_source_component.h  movement_component.h  position_component.h  rotation_component.h  scale_component.h  texture_component.h
include/math_stuff/: MatrixIncorrectDimensionsException.h  VectorIndexOutOfBoundsException.h  matrix.h  matrix4.h  quaternion.h  vec.h  vec3.h
include/resource_manager/: component_manager.h  entity_manager.h  texture_manager.h  vao_manager.h
include/resources/: FileNotFound.h  entity.h  resource_exceptions.h  shader.h
include/system/: camera_system.h  lighting_system.h  movement_system.h  render_system.h
lib/include/glad/: glad.h
licenses/: glfw.txt
math_stuff/: math_stuff.h
math_stuff/exceptions/: MatrixIndexOutOfBoundsException.h  MatrixUninvertibleException.h  VectorIncorrectDimensionsException.h  math_exceptions.h
math_stuff/header_files/: matrix.h  matrix4.h  quaternion.h  vec.h  vec3.h  vec4.h
math_stuff/source_files/: matrix.cpp  matrix4.cpp  quaternion.cpp  vec.cpp  vec3.cpp  vec4.cpp
resources/: resources.h
resources/exceptions/: FailedToLoadShaderException.h  FileNotFound.h
resources/header_files/: mesh.h  model.h  shader.h  vao.h
resources/source_files/: mesh.cpp  model.cpp  shader.cpp  vao.cpp
shaders/: basic.frag  basic.vert
src/: camera_system.cpp  component_manager.cpp  entity_manager.cpp  i_component.cpp  lighting_system.cpp  matrix.cpp  matrix4.cpp  movement_system.cpp  opennt.cpp  quaternion.cpp  render_system.cpp  shader.cpp  texture_manager.cpp  vao_manager.cpp  vec.cpp  vec3.cpp  vec4.cpp
tests/: matrix4_test.cpp  vec3_test.cpp
